--- a/3200f24.html
+++ b/3200f24.html
@@ -131,7 +131,7 @@
                                                <ul class="assignment-list"> 
 
 
-                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #5</span><span class="col-md-2 due-date">due 10/30</span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #5</span><span class="col-md-2 due-date">due <del>10/30</del> 11/4</span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
 
                                                 
@@ -188,6 +188,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/28</span><span class="course-task col-md-10"> 
+                                                        Practice with relations. Start of discussion of symmetric relations.
+                                                    </span></li>
+
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/25</span><span class="course-task col-md-10"> 
                                                         More on index sets. Definition of relations. Pass back HW #4.
@@ -380,7 +385,7 @@
                                                 <p>There are two in-class midterm exams as well as a final exam.</p>
                                                 <ul>
                                                     <li class="with-bullet">Midterm #1: Friday, <del>Sept. 20</del> Sept. 27</li>
-                                                    <li class="with-bullet">Midterm #2: Friday, <del>Nov. 1</del> Nov. 8</li>
+                                                    <li class="with-bullet">Midterm #2: Friday, <del>Nov. 1</del> Nov. 15</li>
                                                     <li class="with-bullet">Final exam: Wed, December 11, 12:00 - 3:00 PM (location TBA)</li>
                                                 </ul>
                                                 <p>No make-up exams will be given. The final exam is <strong>cumulative</strong>.</p>
