--- a/3100f24.html
+++ b/3100f24.html
@@ -166,6 +166,11 @@
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
 
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/28</span><span class="course-task col-md-10"> 
+                                                        Continuity is equivalent to sequential continuity. Establishing functions are continuous straight from the definition. The constant multiple rule for continuity.
+                                                        </span></li>    
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/25</span><span class="course-task col-md-10"> 
                                                         Proof of the theorem on the general form of the DOC. Start of continuity. For the rest of the course, we will be using Kenneth Ross's book <a href="https://link.springer.com/book/10.1007/978-1-4614-6271-2">Elementary Analysis</a> as our reference. The link should allow you to download the PDF for free (thanks UGA!).
                                                         </span></li>    
