--- a/3100f24.html
+++ b/3100f24.html
@@ -325,7 +325,7 @@ Both at office hours and in class, you should expect that your input will be tre
                                                 <ul>
                                                     <li class="with-bullet">Midterm #1: Friday, <del>September 13</del> September 20</li>
                                                     <li class="with-bullet">Midterm #2: Friday, <del>October 11</del> October 18</li>
-                                                    <li class="with-bullet">Midterm #3: Monday, November 18</li>
+                                                    <li class="with-bullet">Midterm #3: <del>Monday, November 18</del> Friday, November 22</li>
                                                     <li class="with-bullet">Final exam: Fri, December 6, 12:00-3 PM (TBA)</li>
                                                 </ul>
                                                 <p>No make-up exams will be given. The final exam is <strong>cumulative</strong>.</p>
