--- a/3100f24.html
+++ b/3100f24.html
@@ -166,6 +166,14 @@
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
 
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/4</span><span class="course-task col-md-10"> 
+                                                        Proof of intermediate value theorem. Statement of Maximum Value Theorem.
+                                                        </span></li>    
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/30</span><span class="course-task col-md-10"> 
+                                                        More &quot;new from old&quot; rules for continuous functions. Polynomials and rational functions are continuous on their domains. 
+                                                        Statement of Intermediate Value Theorem.
+                                                        </span></li>    
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/28</span><span class="course-task col-md-10"> 
                                                         Continuity is equivalent to sequential continuity. Establishing functions are continuous straight from the definition. The constant multiple rule for continuity.
