--- a/3200f24.html
+++ b/3200f24.html
@@ -189,6 +189,16 @@
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
 
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/4</span><span class="course-task col-md-10"> 
+                                                        Practice with symmetric, reflexive, and transitive relations.
+                                                    </span></li>
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/30</span><span class="course-task col-md-10"> 
+                                                        Domain and range of relations. More on symmetric relations.
+                                                    </span></li>
+
+
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/28</span><span class="course-task col-md-10"> 
                                                         Practice with relations. Start of discussion of symmetric relations.
                                                     </span></li>
