--- a/3200f24.html
+++ b/3200f24.html
@@ -130,6 +130,8 @@
                                             <div class="module-content col-sm-9">
                                                <ul class="assignment-list"> 
 
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #6</span><span class="col-md-2 due-date">due <del>11/13</del> 11/4</span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/hw6.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                </li>
 
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #5</span><span class="col-md-2 due-date">due <del>10/30</del> 11/4</span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
@@ -188,6 +190,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/6</span><span class="course-task col-md-10"> 
+                                                        Equivalence relations. Introduction to equivalence classes.
+                                                    </span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/4</span><span class="course-task col-md-10"> 
                                                         Practice with symmetric, reflexive, and transitive relations.
