--- a/3200f24.html
+++ b/3200f24.html
@@ -129,6 +129,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                <ul class="assignment-list"> 
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Read section 5.2</span><span class="col-md-2 due-date">complete by 11/13</span>
+                                                </li>
 
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #6</span><span class="col-md-2 due-date">due 11/13</span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/hw6.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
@@ -190,6 +192,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/8</span><span class="course-task col-md-10"> 
+                                                        Coming to terms with equivalence classes.
+                                                    </span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/6</span><span class="course-task col-md-10"> 
                                                         Equivalence relations. Introduction to equivalence classes.
