add final exam locations

--- a/3200f24.html
+++ b/3200f24.html
@@ -407,7 +407,7 @@
                                                 <ul>
                                                     <li class="with-bullet">Midterm #1: Friday, <del>Sept. 20</del> Sept. 27</li>
                                                     <li class="with-bullet">Midterm #2: Friday, <del>Nov. 1</del> Nov. 15</li>
-                                                    <li class="with-bullet">Final exam: Wed, December 11, 12:00 - 3:00 PM (location TBA)</li>
+                                                    <li class="with-bullet">Final exam: Wed, December 11, 12:00 - 3:00 PM (usual classroom)</li>
                                                 </ul>
                                                 <p>No make-up exams will be given. The final exam is <strong>cumulative</strong>.</p>
                                             </div>
