--- a/3100f24.html
+++ b/3100f24.html
@@ -165,7 +165,10 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
-
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/8</span><span class="course-task col-md-10"> 
+                                                        Illustrating the definition of $\lim_{x\to a} f(x)=L$ with examples. Limit laws. 
+                                                         </span></li>    
+ 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/6</span><span class="course-task col-md-10"> 
                                                        Proof of the Max Value Theorem. Definition of $\lim_{x\to a} f(x)=L$.
                                                         </span></li>    
