--- a/3200f24.html
+++ b/3200f24.html
@@ -129,6 +129,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                <ul class="assignment-list"> 
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #2 learning objectives/review sheet</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/exam2review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                </li>
+
+
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Read section 5.2</span><span class="col-md-2 due-date">complete by 11/13</span>
                                                 </li>
 
@@ -136,7 +140,9 @@
                                                 </li>
 
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #5</span><span class="col-md-2 due-date">due <del>10/30</del> 11/4</span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                </li>   <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #1 learning objectives/review sheet</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/exam1review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
+
 
                                                 
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Read section 5.1</span><span class="col-md-2 due-date">complete by 10/25</span>
@@ -151,9 +157,7 @@
 
 
 
-                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #1 learning objectives/review sheet</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/exam1review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
-                                                </li>
-
+                                             
 
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Read sections 4.1--4.3 in the text.</span><span class="col-md-2 due-date">complete by 9/20</span>
                                                 </li>
