--- a/3200f24.html
+++ b/3200f24.html
@@ -133,7 +133,7 @@
                                                 </li>
 
 
-                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Read section 5.2</span><span class="col-md-2 due-date">complete by 11/13</span>
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Read section <del>5.2</del> 5.3 (you can skip 5.2)</span><span class="col-md-2 due-date">complete by 11/13</span>
                                                 </li>
 
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #6</span><span class="col-md-2 due-date">due 11/13</span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/hw6.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
