--- a/vote.html
+++ b/vote.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSdvTpOmnmRUOHwWAmLeJEMb1Wqy65jS07Mf7SUvd7z4OMrypw/viewform?usp=sf_link/" />
-<a href="https://docs.google.com/forms/d/e/1FAIpQLSdvTpOmnmRUOHwWAmLeJEMb1Wqy65jS07Mf7SUvd7z4OMrypw/viewform?usp=sf_link">If you are not automatically redirected, click here</a>
+<meta http-equiv="refresh" content="0; url=https://forms.gle/QgaMQrY5CjR3J6ES7" />
+<a href="https://forms.gle/QgaMQrY5CjR3J6ES7">If you are not automatically redirected, click here</a>
