--- a/3200f24.html
+++ b/3200f24.html
@@ -197,6 +197,16 @@
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
 
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/15</span><span class="course-task col-md-10"> 
+                                                        Exam #2.
+                                                    </span></li>
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/13</span><span class="course-task col-md-10"> 
+                                                        Introduction to functions.
+                                                    </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/11</span><span class="course-task col-md-10"> 
                                                         More on equivalence classes: $[x] = [y] \Longleftrightarrow x\sim y$, and for any two equivalence classes, either $[x]=[y]$ or $[x]\cap [y]=\emptyset$. Equivalence classes and set partitions.
                                                     </span></li>
