--- a/3100f24.html
+++ b/3100f24.html
@@ -171,6 +171,19 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/15</span><span class="course-task col-md-10"> Simple derivatives (constants, powers of $x$).                                                         Rolle's theorem and the mean value theorem. 
+                                                         </span></li>    
+
+
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/13</span><span class="course-task col-md-10"> 
+                                                        Quotient rule, chain rule, and the extreme value theorem for derivatives.
+                                                         </span></li>    
+                                                         <li class="with-bullet"><span class="course-date col-sm-1">11/11</span><span class="course-task col-md-10"> 
+                                                            Introduction to derivatives. 
+                                                             </span></li>    
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/8</span><span class="course-task col-md-10"> 
                                                         Illustrating the definition of $\lim_{x\to a} f(x)=L$ with examples. Limit laws. 
                                                          </span></li>    
