--- a/3100f24.html
+++ b/3100f24.html
@@ -175,6 +175,9 @@
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
 
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/18</span><span class="course-task col-md-10"> Closed forms of power series. Geometric series. Manipulating closed forms with differentiation and integration.
+                                                    </span></li>    
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/15</span><span class="course-task col-md-10"> Simple derivatives (constants, powers of $x$).                                                         Rolle's theorem and the mean value theorem. 
                                                          </span></li>    
 
