--- a/3100f24.html
+++ b/3100f24.html
@@ -175,6 +175,11 @@
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
 
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/20</span><span class="course-task col-md-10"> Motivation and definiton of Taylor series. An example of a function with a Taylor series not represented by this series at any nonzero point. Examples of Taylor series for $e^x$ and $\sin x$. 
+                                                    </span></li>    
+
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/18</span><span class="course-task col-md-10"> Closed forms of power series. Geometric series. Manipulating closed forms with differentiation and integration.
                                                     </span></li>    
 
