--- a/3100f24.html
+++ b/3100f24.html
@@ -176,6 +176,10 @@
                                                 <ul class="course-summary-to-date">
 
 
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/22</span><span class="course-task col-md-10"> Exam #3.
+                                                    </span></li>    
+
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/20</span><span class="course-task col-md-10"> Motivation and definiton of Taylor series. An example of a function with a Taylor series not represented by this series at any nonzero point. Examples of Taylor series for $e^x$ and $\sin x$. 
                                                     </span></li>    
 
