--- a/3200f24.html
+++ b/3200f24.html
@@ -197,6 +197,12 @@
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
 
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/25</span><span class="course-task col-md-10"> 
+                                                        Left inverse functions. Right inverse functions. Inverse functions. $f$ has an inverse if and only if $f$ is a bijection. The inverse funcntion of $f$, if it exists, is unique.
+                                                     </span></li>
+ 
+ 
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/22</span><span class="course-task col-md-10"> 
                                                         One-to-one and onto functions, continued. Composition of functions.
                                                      </span></li>
