final review sheet for 3200

--- a/3200f24.html
+++ b/3200f24.html
@@ -133,7 +133,10 @@
    <li class="with-bullet"><span class="col-md-9 assignment-name">&quot;Homework&quot; 7 (practice only; not to turn in!)</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/hw7.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
 
-											   
+											    <li class="with-bullet"><span class="col-md-9 assignment-name">Final exam learning objectives/review sheet</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/finalreview.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                </li>
+
+
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #2 learning objectives/review sheet</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/exam2review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
 
