update research page

--- a/research.html
+++ b/research.html
@@ -2886,6 +2886,27 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
 
                 <li class="col-sm-12 list-item with-bullet">
                     <div class="col-sm-10">
+                        <h4>    <span class="paper-title">Two variants of a theorem of Schinzel and Wójcik on multiplicative orders</span>  <span class="paper-author"></span>          </h4>
+                        <p>
+                            <a href="https://www.impan.pl/en/publishing-house/journals-and-series/acta-arithmetica"><span class="journal-name">Acta Arithmetica</span></a> (<span class="paper-year">to appear</span>)</p>
+                    </div>
+                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/SchinzelWojcik.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+                    <div class="paper-abstract col-md-12 col-xs-12">
+                        <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper146" aria-expanded="false" aria-controls="paper146">Abstract</a>
+                            <div class="collapse" id="paper146">
+                                <div class="well paper-abtract-content">
+                                    <p>  Schinzel and Wójcik have shown that if $\alpha,\beta \in \mathbb{Q}^{\times} \setminus\{\pm 1\}$, then there are infinitely many primes $p$ where $v_p(\alpha)=v_p(\beta)=0$ and where $\alpha,\beta$ share the same multiplicative order modulo $p$. We present two variants of their result. First,  we give a short and simple proof of the analogous statement where $\mathbb{Q}$ is replaced by any global function field $K$. Second, we show that a similar conclusion holds in the number field case provided one can find a suitable `auxiliary prime'. Given $K$, $\alpha$, and $\beta$, it appears  simple in practice to find such a prime. As an application, we prove there are infinitely many primes $p$ with the same rank of appearance in the sequences of Pell and Fibonacci numbers. </p>
+                       </div>
+                            </div>
+                        </p>
+                    </div>
+                </li> 
+
+
+
+
+                <li class="col-sm-12 list-item with-bullet">
+                    <div class="col-sm-10">
                         <h4>    <span class="paper-title">Review of: <span class="underline">Excursions in Number Theory, Algebra, and Analysis</span>, by Kenneth Ireland and Al Cuoco</span>  <span class="paper-author"></span>          </h4>
                         <p>
                             <a href="https://link.springer.com/journal/283"><span class="journal-name">Math. Intelligencer</span></a> (<span class="paper-year">to appear</span>)</p>
@@ -2928,18 +2949,10 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
 
 <li class="col-sm-12 list-item with-bullet">
     <div class="col-sm-10">
-        <h4> <span class="paper-title">Two variants of a theorem of Schinzel and Wójcik on multiplicative orders</span>
-        <span class="paper-author"></span></h4>
+        <h4> <span class="paper-title">The typical elasticity of a quadratic order</span>
+        <span class="paper-author">(w/ K. (S.) Fan)</span></h4>
     </div>
-    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/SchinzelWojcik.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
-</li>        
-
-<li class="col-sm-12 list-item with-bullet">
-    <div class="col-sm-10">
-        <h4> <span class="paper-title">Towards a Schinzel--Wójcik theorem for number fields</span>
-        <span class="paper-author"></span></h4>
-    </div>
-    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/SW-numberfield.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/TypicalElasticity.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
 </li>        
 
 
