--- a/research.html
+++ b/research.html
@@ -161,7 +161,7 @@
                                                         <div class="col-sm-10">
                                                             <h4>    <span class="paper-title">    Simultaneous prime specializations of polynomials over finite fields    </span>             </h4>
                                                             <p>
-                                                                <a href="   http://old.lms.ac.uk/publications/proceedings/  "> <span class="journal-name">Proc. London Math. Soc.</span> </a><span>  97 (<span class="paper-year">2008</span>), no. 3, 545--567  </span></p>
+                                                                <a href="https://www.lms.ac.uk/publications/plms"> <span class="journal-name">Proc. London Math. Soc.</span> </a><span>  97 (<span class="paper-year">2008</span>), no. 3, 545--567  </span></p>
                                                         </div>
                                                         <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/twinsl.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                                                         <div class="paper-abstract col-md-12 col-xs-12">
