--- a/research.html
+++ b/research.html
@@ -2909,7 +2909,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">Review of: <span class="underline">Excursions in Number Theory, Algebra, and Analysis</span>, by Kenneth Ireland and Al Cuoco</span>  <span class="paper-author"></span>          </h4>
                         <p>
-                            <a href="https://link.springer.com/journal/283"><span class="journal-name">Math. Intelligencer</span></a> (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://link.springer.com/journal/283"><span class="journal-name">Math. Intelligencer</span></a> 46 (<span class="paper-year">2024</span>), 297--299</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/IrelandCuoco.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <!-- <div class="paper-abstract col-md-12 col-xs-12">
