--- a/research.html
+++ b/research.html
@@ -2830,7 +2830,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">$\mathbb{Z}[\sqrt{-5}]$: halfway to unique factorization</span>  <span class="paper-author"></span>          </h4>
                         <p>
-                            <a href="https://maa.org/press/periodicals/american-mathematical-monthly"><span class="journal-name">Amer. Math. Monthly</span></a> (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://maa.org/press/periodicals/american-mathematical-monthly"><span class="journal-name">Amer. Math. Monthly</span></a> 131 (<span class="paper-year">2024</span>), 712--717</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/HFD.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
