--- a/research.html
+++ b/research.html
@@ -2847,7 +2847,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">The distribution of intermediate prime factors</span>  <span class="paper-author">(w/ N. McNew and A. Singha Roy)</span>          </h4>
                         <p>
-                            <a href="https://ijm.math.illinois.edu/"><span class="journal-name">Illinois J. Math.</span></a> (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://ijm.math.illinois.edu/"><span class="journal-name">Illinois J. Math.</span></a> 68 (<span class="paper-year">2024</span>), 537--576</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/middleprime.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
