--- a/research.html
+++ b/research.html
@@ -2869,7 +2869,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">Maximally elastic quadratic fields</span>  <span class="paper-author"></span>          </h4>
                         <p>
-                            <a href="https://www.sciencedirect.com/journal/journal-of-number-theory/issues"><span class="journal-name">J. Number Theory</span></a> (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://www.sciencedirect.com/journal/journal-of-number-theory/issues"><span class="journal-name">J. Number Theory</span></a> 267 (<span class="paper-year">2025</span>), 80--100</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/maximallyelastic.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
