--- a/4000s25.html
+++ b/4000s25.html
@@ -88,14 +88,14 @@
                             <div class="col-sm-12 content__item">
                                 <div id="course" class="card">
                                     <div class="card__image course-block row col-sm-12">
-                                        <div class="course-title bg__4">
+                                        <div class="course-title bg__5">
                                             <div class="col-md-9">
-                                                <h4>MATH 4000/6000: Modern Algebra &amp; Geometry I</h4>
+                                                <h4>MATH 4000/6000: Modern Algebra I</h4>
                                                 <h5>MWF 12:40-1:30 PM, Boyd Graduate Studies Building, Room 323</h5>
                                             </div>
                                             <div class="col-md-3 semester-wrapper text-right"><span class="semester">Spring 2025</span></div>
                                         </div>
-                                        <div class="course-header bg__algebraicalt">
+                                        <div class="course-header bg__algebraic">
                                             <div class="course-info col-sm-12 col-md-4 col-lg-3">
                                                 <div class="office">
                                                     <strong>Office:</strong>
@@ -143,7 +143,7 @@
                                             <div class="module-content col-sm-9">
                                                 <p>At this point in your mathematical career, you have accumulated a wealth of experience computing with integers, real numbers, and complex numbers. These items are so familiar to you that they may even have the appearance of being God-given --- as if understanding those objects is What Mathematics is All About.</p>
                                                 <p>Abstract algebra challenges this notion. Integers, real numbers, and complex numbers are indeed fantastic, but they are fantastic not because they are handed down from on high, but because they have a rich and theory with useful consequences. And given how useful these objects are, we are compelled to isolate (and consider in the abstract) their most important properties. Once we do so, we find that there are many other objects with the same sorts of interesting properties. For example, we will see that the integers are an example of what is called a <em>ring</em>, that the real numbers and complex numbers are <em>fields</em>, and that the nonzero real numbers form a <em>group</em>. These more abstract-seeming objects are not just interesting in an intellectual let's-talk-about-this-over-coffee kind of way, but understanding them deeply often leads to a new understanding of the objects of original interest.</p>
-                                                <p>Let me try to bring this back down to earth: Some primes, like 5, can be written as a sum of two squares: $5 = 1^2 + 2^2$. And other primes, like 3, cannot. The question of when this is possible is a question about the integers. But the easiest way to answer this question is to visit a totally different mathematically system, the <em>ring of Gaussian integers</em>. MATH 6000 students can expect  </p>
+                                                <p>Let me try to bring this back down to earth: Some primes, like 5, can be written as a sum of two squares: $5 = 1^2 + 2^2$. And other primes, like 3, cannot. The question of when this is possible is a question about the integers. But the easiest way to answer this question is to visit a totally different mathematically system, the <em>ring of Gaussian integers</em>. MATH 6000 students can expect problems about this! </p>
                                             </div>
                                         </div>
                                         <div class="module-block row">
@@ -188,7 +188,7 @@
 
                                                 <p>There will be three fifty-minute <strong>in-class</strong> exams, as well as a final exam.
                                                     <ul>
-                                                    <li class="with-bullet">Midterm #1: to be added</li>
+                                                    <li class="with-bullet">Midterm #1: to be added shortly</li>
                                                     <li class="with-bullet">Midterm #2: to be added</li>
                                                     <li class="with-bullet">Midterm #3: to be added</li>
                                                         <li class="with-bullet">Final exam: Wednesday, April 30
@@ -242,6 +242,7 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
                             </div>
                             <div class="col-sm-12 content__item">
                                 <div class="card">
