--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
                                             <i class="pp-icon-doc icon icon--lg"></i> Courses
                                         </a>
                                   <ul>
-                                              <li><a href="3100f24.html">MATH 3100</a></li>
-                                         <li><a href="3200f24.html">MATH 3200</a></li>
+                                              <li><a href="4000s25.html">MATH 4000/6000 (Abstract Algebra)</a></li>
                                             </ul>
                                     </li>
                                 </ul>
