--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul>
-                                                    <li class="with-bullet"><a href="4000s25.html">MATH 4000: Modern Algebra I</a></li>
+                                                    <li class="with-bullet"><a href="4000s25.html">MATH 4000/6000: Modern Algebra I</a></li>
                                                   </ul>
                                             </div>
                                         </div>
