--- a/4000s25.html
+++ b/4000s25.html
@@ -188,9 +188,9 @@
 
                                                 <p>There will be three fifty-minute <strong>in-class</strong> exams, as well as a final exam.
                                                     <ul>
-                                                    <li class="with-bullet">Midterm #1: to be added shortly</li>
-                                                    <li class="with-bullet">Midterm #2: to be added</li>
-                                                    <li class="with-bullet">Midterm #3: to be added</li>
+                                                    <li class="with-bullet">Midterm #1: Friday, February 14</li>
+                                                    <li class="with-bullet">Midterm #2: Friday, March 28</li>
+                                                    <li class="with-bullet">Midterm #3: Friday, April 18</li>
                                                         <li class="with-bullet">Final exam: Wednesday, April 30
                                                             12:00 - 3 PM (location TBA)</li>
                                                     </ul>
