--- a/4000s25.html
+++ b/4000s25.html
@@ -141,9 +141,11 @@
                                                 <h6>Course synopsis</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
+                                                
                                                 <p>At this point in your mathematical career, you have accumulated a wealth of experience computing with integers, real numbers, and complex numbers. These items are so familiar to you that they may even have the appearance of being God-given --- as if understanding those objects is What Mathematics is All About.</p>
                                                 <p>Abstract algebra challenges this notion. Integers, real numbers, and complex numbers are indeed fantastic, but they are fantastic not because they are handed down from on high, but because they have a rich and theory with useful consequences. And given how useful these objects are, we are compelled to isolate (and consider in the abstract) their most important properties. Once we do so, we find that there are many other objects with the same sorts of interesting properties. For example, we will see that the integers are an example of what is called a <em>ring</em>, that the real numbers and complex numbers are <em>fields</em>, and that the nonzero real numbers form a <em>group</em>. These more abstract-seeming objects are not just interesting in an intellectual let's-talk-about-this-over-coffee kind of way, but understanding them deeply often leads to a new understanding of the objects of original interest.</p>
                                                 <p>Let me try to bring this back down to earth: Some primes, like 5, can be written as a sum of two squares: $5 = 1^2 + 2^2$. And other primes, like 3, cannot. The question of when this is possible is a question about the integers. But the easiest way to answer this question is to visit a totally different mathematically system, the <em>ring of Gaussian integers</em>. MATH 6000 students can expect problems about this! </p>
+                                                <p>(The official UGA course description, including learning outcomes, can be found <a href="./4000s25/4000-official-description.pdf">here</a>.)</p>
                                             </div>
                                         </div>
                                         <div class="module-block row">
@@ -209,7 +211,11 @@
                                                     </p>
                                                     <p>Students enrolled in MATH 6000 will take the same exams as the students in MATH 4000 but will be assigned additional homework problems.
                                                     </p>
-                                                    <p>You are not only allowed, but <strong>encouraged</strong> to collaborate with your classmates on the homework assignments. The joy of mathematical discovery was meant to be shared! Having said that, collaboration does not mean copying. You may not copy solutions from a textbook, classmate, website, etcetera, and you must be the one to handwrite (or type) your solutions. By entering UGA, you have already agreed to abide by the UGA honor code described in detail at <a href="https://honesty.uga.edu/Academic-Honesty-Policy/">https://honesty.uga.edu/Academic-Honesty-Policy/</a>. A good rule of thumb is that you should be able to explain any work you turn in to a hypothetical interrogator.</p>
+                                                    <p>You are not only allowed, but <strong>encouraged</strong> to collaborate with your classmates on the homework assignments. The joy of mathematical discovery was meant to be shared! Having said that, collaboration does not mean copying, and consulting AI tools such as ChatGPT is not &quot;collaboration&quot; in the sense intended. You may not copy solutions from a textbook, classmate, website (including an AI tool), etcetera, and you must be the one to handwrite (or type) your solutions. 
+                                                        <p> By entering UGA, you have already agreed to abide by the UGA honor code: &quot;I will be academically honest in all of my academic work and will
+                                                        not tolerate academic dishonesty of others.&quot; A Culture of Honesty, the University's policy and
+                                                        procedures for handling cases of suspected dishonesty, can be found at <a href="https://honesty.uga.edu">honesty.uga.edu</a>.
+                                                        A good rule of thumb is that you should be able to explain any work you turn in to a hypothetical interrogator.</p>
                                             </div>
                                         </div>
 
@@ -221,13 +227,24 @@
                                             <div class="module-content col-sm-9">
                                                 <p>Students with disabilities who may require special accommodations should talk to me as soon as possible. Appropriate documentation concerning disabilities may be required. For further information, please visit the <a href="http://drc.uga.edu/">Disability Resource Center page</a>.</p>
                                             </div>
-
+</div>
                                             <div class="module-block row">
                                                 <div class="module-title col-sm-3 text-right">
-                                                    <h6>Mental health and wellness</h6>
+                                                    <h6>UGA Well-being resources</h6>
                                                 </div>
-                                                <div class="module-content col-sm-9"><p>
-                                            If you or someone you know needs assistance, you are encouraged to contact Student Care and Outreach in the Division of Student Affairs at 706-542-8479 or visit <a href="https://sco.uga.edu">https://sco.uga.edu</a>. They will help you navigate any difficult circumstances you may be facing by connecting you with the appropriate resources or services. UGA has several resources for a student seeking mental health services (<a href="https://caps.uga.edu/well-being-prevention-programs-mental-health/">https://caps.uga.edu/well-being-prevention-programs-mental-health/</a>) or crisis support (<a href="https://healthcenter.uga.edu/emergencies/">https://healthcenter.uga.edu/emergencies/</a>).
+                                                <div class="module-content col-sm-9">
+                                                    <p>UGA Well-being Resources promote student success by cultivating a culture that supports a more active, healthy, and engaged student community.</p>
+    <p>Anyone needing assistance is encouraged to contact <a href="mailto:sco@uga.edu">Student Care & Outreach (SCO)</a> in the Division of Student Affairs at 706-542-8479 or visit <a href="https://sco.uga.edu">sco.uga.edu</a>. Student Care & Outreach helps students navigate difficult circumstances by connecting them with the most appropriate resources or services. They also administer the <a href="mailto:embark@uga.edu">Embark@UGA</a> program which supports students experiencing, or who have experienced, homelessness, foster care, or housing insecurity.</p>
+    <p>UGA provides both clinical and non-clinical options to support student well-being and mental health, any time, any place. Whether on campus, or studying from home or abroad, UGA Well-being Resources are here to help.</p>
+    <ul>
+        <li><a href="https://well-being.uga.edu">Well-being Resources</a></li>
+        <li><a href="https://sco.uga.edu">Student Care and Outreach</a></li>
+        <li><a href="https://healthcenter.uga.edu">University Health Center</a></li>
+        <li><a href="https://caps.uga.edu">Counseling and Psychiatric Services</a> or CAPS 24/7 crisis support at 706-542-2273</li>
+        <li><a href="https://healthpromotion.uga.edu">Health Promotion / Fontaine Center</a></li>
+        <li><a href="https://drc.uga.edu">Disability Resource Center and Testing Services</a></li>
+    </ul>
+    <p>Additional information, including free digital well-being resources, can be accessed through the UGA app or by visiting <a href="https://well-being.uga.edu">https://well-being.uga.edu</a>.</p>
                    </div>
                                             </div>
     
