--- a/4000s25.html
+++ b/4000s25.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MATH 4000/6000: Modern Algebra &mp; Geometry I - Spring 25 | Paul Pollack</title>
+    <title>MATH 4000/6000: Modern Algebra I - Spring 25 | Paul Pollack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/iconsmind.css" rel="stylesheet" type="text/css" media="all" />
@@ -115,7 +115,10 @@
                                                 <h6>Assignments and other course material</h6>
                                             </div>
                                             <div class="module-content col-sm-9">                                            <ul class="course-summary-to-date">
+                                               
                                             	<li class="with-bullet"><span class="col-md-9 assignment-name">Handout on properties of the integers</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/integers.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Syllabus (static copy)</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/4000static.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li></ul>
                                             </div>
                                         </div>
@@ -160,7 +163,7 @@
                                                             <h4>    <span class="book-title">Abstract Algebra: A Geometric Approach </span>
                                                             </h4>
                                                             <p>
-                                                                <span>by <a href="http://faculty.franklin.uga.edu/shifrin/">Theodore Shifrin</a></span>
+                                                                <span>by <a href="http://alpha.math.uga.edu/~shifrin/">Theodore Shifrin</a></span>
                                                             </p>
                                                             <div class="book-buttons">
                                                                 <a class="btn btn--md bg--standard bg--errata no-border-radius" href=http://www.math.uga.edu/sites/default/files/inline-files/AlgebraErrata.pdf>
