--- a/4000s25.html
+++ b/4000s25.html
@@ -103,7 +103,7 @@
                                                 </div>
                                                 <div class="office">
                                                     <strong>Office hours:</strong><br>
-                                               TBA!
+                                               MWF 1:45 PM - 3:00 PM
                                                 </div>
                                                 <div class="course-notice">This page is a copy of the syllabus. The web page will occasionally be updated with additional course materials.</div>
                                             </div>
@@ -128,7 +128,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
-                                             
+                                                <li class="with-bullet"><span class="course-date col-md-1">1/10</span><span class="course-task col-md-10">(S)no(w) class.</span></li> 
+                                                <li class="with-bullet"><span class="course-date col-md-1">1/8</span><span class="course-task col-md-10">Simple consequences of our axioms: Uniqueness of identities. Uniqueness of additive inverses. $(-1)a=-a$. $0\cdot a=0$. </span></li> 
                                             <li class="with-bullet"><span class="course-date col-md-1">1/6</span><span class="course-task col-md-10">Review of syllabus. Fundamental properties of $\mathbb{Z}$. </span></li>
                                                 </ul>
                                             </div>
