--- a/4000s25.html
+++ b/4000s25.html
@@ -91,7 +91,7 @@
                                         <div class="course-title bg__5">
                                             <div class="col-md-9">
                                                 <h4>MATH 4000/6000: Modern Algebra I</h4>
-                                                <h5>MWF 12:40-1:30 PM, Boyd Graduate Studies Building, Room 323</h5>
+                                                <h5>MWF 12:40-1:30 PM, Boyd Graduate Studies Building, Room <del>323</del> 322</h5>
                                             </div>
                                             <div class="col-md-3 semester-wrapper text-right"><span class="semester">Spring 2025</span></div>
                                         </div>
