--- a/4000s25.html
+++ b/4000s25.html
@@ -128,6 +128,7 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">1/13</span><span class="course-task col-md-10">Proof $a\cdot 0 = 0$. Laws of inequalities. $1 \in \mathbb{Z}^{+}$. Statement that $1$ is the least element of $\mathbb{Z}^{+}$. </span></li> 
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/10</span><span class="course-task col-md-10">(S)no(w) class.</span></li> 
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/8</span><span class="course-task col-md-10">Simple consequences of our axioms: Uniqueness of identities. Uniqueness of additive inverses. $(-1)a=-a$. $0\cdot a=0$. </span></li> 
                                             <li class="with-bullet"><span class="course-date col-md-1">1/6</span><span class="course-task col-md-10">Review of syllabus. Fundamental properties of $\mathbb{Z}$. </span></li>
