--- a/4000s25.html
+++ b/4000s25.html
@@ -115,7 +115,8 @@
                                                 <h6>Assignments and other course material</h6>
                                             </div>
                                             <div class="module-content col-sm-9">                                            <ul class="course-summary-to-date">
-                                               
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #1</span><span class="col-md-2 due-date">due 1/25</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                </li>
                                             	<li class="with-bullet"><span class="col-md-9 assignment-name">Handout on properties of the integers</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/integers.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Syllabus (static copy)</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/4000static.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
