--- a/research.html
+++ b/research.html
@@ -2924,6 +2924,28 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                 </li> 
 
 
+                
+                <li class="col-sm-12 list-item with-bullet">
+                    <div class="col-sm-10">
+                        <h4>    <span class="paper-title">Mean values of multiplicative functions and applications to residue-class distribution</span>  <span class="paper-author">(w/ A. Singha Roy)</span>          </h4>
+                        <p>
+                            <a href="https://www.cambridge.org/core/journals/proceedings-of-the-edinburgh-mathematical-society"><span class="journal-name">Proc. Edinburgh Math. Soc.</span></a> 267 (<span class="paper-year">to appear</span>)</p>
+                    </div>
+                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/meanphi.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+                    <div class="paper-abstract col-md-12 col-xs-12">
+                        <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper146" aria-expanded="false" aria-controls="paper146">Abstract</a>
+                            <div class="collapse" id="paper146">
+                                <div class="well paper-abtract-content">
+                                    <p>   We provide a uniform bound on the partial sums of multiplicative functions under very general hypotheses. As an application, we 
+                                        deduce the equidistribution of the Alladi-Erd\H{o}s function $A(n) = \sum_{p^k \parallel n} k p$ in residue classes to moduli $q \le (\log x)^K$ (with $K$ fixed but arbitrary), improving known estimates on 
+                                        give a nearly optimal estimate for the count of $n \le x$ for which the Alladi-Erd\H{o}s function $A(n) = \sum_{p^k \parallel n} k p$ takes values in a given residue class modulo $q$, where $q$ varies uniformly up to a fixed power of $\log x$. We establish a similar result for the equidistribution of the Euler totient function $\phi(n)$ among the coprime residues to the &quot;correct&quot; moduli $q$ that vary uniformly in a similar range, and also quantify the failure of  equidistribution of the values of $\phi(n)$ among the coprime residue classes to the &quot;incorrect&quot; moduli. </p>
+                       </div>
+                            </div>
+                        </p>
+                    </div>
+                </li> 
+
+
 
 
 
@@ -2937,15 +2959,6 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="paper-list list">
-                                               
-<li class="col-sm-12 list-item with-bullet">
-    <div class="col-sm-10">
-        <h4> <span class="paper-title">Mean values of multiplicative functions and applications to residue-class distribution</span>
-        <span class="paper-author">(w/ A. Singha Roy)</span></h4>
-    </div>
-    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/meanphi.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
-</li>         
-
 
 
 
