--- a/vote.html
+++ b/vote.html
@@ -1,15 +1,11 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://forms.gle/ErMRkbDFwQFgv7Pj7">
-        <script type="text/javascript">
-            window.location.href = "https://forms.gle/ErMRkbDFwQFgv7Pj7"
-        </script>
-        <title>Page Redirection</title>
-    </head>
-    <body>
-        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://forms.gle/ErMRkbDFwQFgv7Pj7'>link </a>.
-    </body>
-</html>
+<meta charset="UTF-8" />
+<meta http-equiv="refresh" content="5; url=https://docs.google.com/forms/d/e/1FAIpQLSfRQt29NiyN4Wuq17NlxUsvNZtMvFUum4imuxx2JRKXM3PODw/viewform?usp=header" />
+<script type="text/javascript">
+  window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSfRQt29NiyN4Wuq17NlxUsvNZtMvFUum4imuxx2JRKXM3PODw/viewform?usp=header";
+</script>
+<title>Page Redirection</title>
+
+<!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+If you are not redirected automatically, follow this <a href="https://docs.google.com/forms/d/e/1FAIpQLSfRQt29NiyN4Wuq17NlxUsvNZtMvFUum4imuxx2JRKXM3PODw/viewform?usp=header">Link</a>
+
+
