--- a/research.html
+++ b/research.html
@@ -69,8 +69,7 @@
                                                 <i class="pp-icon-doc icon icon--lg"></i> Courses
                                             </a>
                                             <ul>
-                                                <li><a href="3100f24.html">MATH 3100</a></li>
-                                                <li><a href="3200f24.html">MATH 3200</a></li>
+                                                <li><a href="4000f25.html">MATH 4000/6000</a></li>
                                             </ul>
                                         </li>
 
