--- a/4000s25.html
+++ b/4000s25.html
@@ -116,7 +116,7 @@
                                                 <h6>Assignments and other course material</h6>
                                             </div>
                                             <div class="module-content col-sm-9">                                            <ul class="course-summary-to-date">
-                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #1</span><span class="col-md-2 due-date">due 1/24</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #1</span><span class="col-md-2 due-date">due <del>1/24</del> 1/27</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
                                             	<li class="with-bullet"><span class="col-md-9 assignment-name">Handout on properties of the integers</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/integers.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
