--- a/4000s25.html
+++ b/4000s25.html
@@ -134,6 +134,7 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">1/29</span><span class="course-task col-md-10">Congruences mod $m$. Congruence mod $m$ is an equivalence relation on $\mathbb{Z}$. Congruence mod $m$ respects $+$ and $\cdot$. If $m \in \mathbb{Z}^{+}$, then each integer is congruent mod $m$ to precisely one of $0,1,2,\dots,m-1$. Examples. Statement of Fermat's little theorem.</span></li> 
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/27</span><span class="course-task col-md-10">Prime numbers. Euclid's Lemma. The Fundamental Theorem of Arithmetic. </span></li> 
 
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/24</span><span class="course-task col-md-10">Euclid's algorithm: examples, why it terminates, and why its output is the gcd. $\gcd(a,b)=ax+by$ for some $x,y \in \mathbb{Z}$ (proof on HW). The Fundamental gcd lemma: If $a\mid bc$ and $\gcd(a,b)=1$, then $a\mid c$.  </span></li> 
