--- a/4000s25.html
+++ b/4000s25.html
@@ -135,6 +135,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">2/3</span><span class="course-task col-md-10">Chinese Remainder Theorem, Part II: If $N_0$ is one solution, the full solution set consists precisely of all $N\equiv N_0\pmod{mn}$.
+                                                </span></li> 
 
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/31</span><span class="course-task col-md-10">Proof of Fermat's little theorem. Chinese Remainder Theorem, Part I: A system of congruences with two coprime moduli $m, n$ always has a solution. Start of Part II: proof that if $N_0$ is one solution, any $N\equiv N_0\pmod{mn}$ is also a solution.
                                                 </span></li> 
