--- a/4000s25.html
+++ b/4000s25.html
@@ -135,7 +135,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
-                                                <li class="with-bullet"><span class="course-date col-md-1">2/3</span><span class="course-task col-md-10">Chinese Remainder Theorem, Part II: If $N_0$ is one solution, the full solution set consists precisely of all $N\equiv N_0\pmod{mn}$.
+                                                <li class="with-bullet"><span class="course-date col-md-1">2/5</span><span class="course-task col-md-10">$+$ and $\cdot$ on $\mathbb{Z}_m$. Proof operations are well-defined (label-independent). Properties of $\mathbb{Z}_m$. Definitions of &quot;ring&quot; and &quot;commutative ring&quot;. Examples. Simple facts true in every ring.
+                                                </span></li> 
+
+                                                <li class="with-bullet"><span class="course-date col-md-1">2/3</span><span class="course-task col-md-10">Chinese Remainder Theorem, Part II: If $N_0$ is one solution, the full solution set consists precisely of all $N\equiv N_0\pmod{mn}$. Definition of $\mathbb{Z}_m$ as the collection of equivalence classes modulo $m$.
                                                 </span></li> 
 
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/31</span><span class="course-task col-md-10">Proof of Fermat's little theorem. Chinese Remainder Theorem, Part I: A system of congruences with two coprime moduli $m, n$ always has a solution. Start of Part II: proof that if $N_0$ is one solution, any $N\equiv N_0\pmod{mn}$ is also a solution.
